--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "craftify",
   "displayName": "Craftify",
   "description": "Ship Next.js projects 10x faster using common snippets.",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "publisher": "MustafaAlhasanat",
   "engines": {
     "vscode": "^1.102.0"
@@ -66,7 +66,23 @@
       },
       {
         "language": "prisma",
-        "path": "./snippets/prisma.code-snippets"
+        "path": "./snippets/tools.code-snippets"
+      },
+      {
+        "language": "typescript",
+        "path": "./snippets/tools.code-snippets"
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./snippets/tools.code-snippets"
+      },
+      {
+        "language": "javascript",
+        "path": "./snippets/tools.code-snippets"
+      },
+      {
+        "language": "javascriptreact",
+        "path": "./snippets/tools.code-snippets"
       }
     ]
   },
